; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_SpriteHelpers.c_SpritesReset.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_SpriteHelpers.c_SpritesReset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SpritesReset() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %10, %0
  %3 = load i32, i32* %1, align 4
  %4 = icmp ne i32 %3, 40
  br i1 %4, label %5, label %13

5:                                                ; preds = %2
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @move_sprite(i32 %6, i32 0, i32 0)
  %8 = load i32, i32* %1, align 4
  %9 = call i32 @set_sprite_prop(i32 %8, i32 0)
  br label %10

10:                                               ; preds = %5
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %1, align 4
  br label %2

13:                                               ; preds = %2
  ret void
}

declare dso_local i32 @move_sprite(i32, i32, i32) #1

declare dso_local i32 @set_sprite_prop(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
